--- a/index12.html
+++ b/index12.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230711175948"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230711175948"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230711175948"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230711175948"></script>
-  <script src="files/script /tilt.js?_v=20230711175948"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230712195546"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230712195546"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230712195546"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230712195546"></script>
+  <script src="files/script /tilt.js?_v=20230712195546"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230711175948" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230711175948" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230712195546" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230712195546" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    
     <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -30,6 +30,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="files/favicon/favicon-16x16.png">
     <link rel="manifest" href="files/favicon/manifest.json">
     <meta name="msapplication-TileImage" content="files/favicon/ms-icon-144x144.png">
+    <title>Portfolio Alex</title>
 </head>
 <header>
 	<nav class="Main_navbar">
@@ -78,8 +79,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230711175948" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230711175948"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230712195546" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230712195546"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -92,24 +93,12 @@
             <div class="row name_d">
               <div class="col-2 text-center mob_on3">
                 <h2>DRDOOGY</h2>
-                <h2 class="mob_off" style="font-size: 1.1rem; font-weight: 300;">BISNESS SITE</h2>
+                <h2 class="mob_off" style="font-size: 1.1rem; font-weight: 300;">Web market site</h2>
               </div>
               <div class="col-6 align-items-center info_up_box">
-                <h3 style="font-size: 0.6rem;">"Senator Barbershop" is a great web project dedicated to the barbershop.
-                  With its sleek
-                  and user-friendly interface, this website aims to provide a seamless and convenient platform for
-                  booking
-                  barber services. Emphasizing the artistry and skill of its barbers, "Senator Barbershop" showcases an
-                  impressive
-                  gallery
-                  of their outstanding work, allowing visitors to appreciate their talent and attention to detail. The
-                  platform's
-                  intuitive booking system creates a hassle-free experience, enabling customers to easily schedule
-                  appointments and
-                  select
-                  their preferred services. Through its visually captivating design and impressive functionality,
-                  "Senator Barbershop"
-                  serves as a captivating showcase of the modern barbershop experience.
+                <h3 style="font-size: 0.6rem; color: #b4b4b4;">"Drdoogy" is web project that introduces an online store specializing in products for pets, featuring an appealing and
+                user-friendly interface. With a captivating combination of red and white colors, the design creates an inviting
+                atmosphere for pet owners.
                 </h3>
               </div>
               <div class="col-2 mob_off">
@@ -136,18 +125,9 @@
             <h2>About</h2>
             <div class="col-4 mob_off"></div>
             <div class="col-4  mob_on justify-content-end align-items-center d-flex">
-              <p>"Senator Barbershop" is a great web project dedicated to the barbershop. With its sleek and
-                user-friendly interface,
-                this website aims to provide a seamless and convenient platform for booking
-                barber services. Emphasizing the artistry and skill of its barbers, "Senator Barbershop" showcases an
-                impressive gallery
-                of their outstanding work, allowing visitors to appreciate their talent and attention to detail. The
-                platform's
-                intuitive booking system creates a hassle-free experience, enabling customers to easily schedule
-                appointments and select
-                their preferred services. Through its visually captivating design and impressive functionality, "Senator
-                Barbershop"
-                serves as a captivating showcase of the modern barbershop experience.</p>
+              <p>"Drdoogy" is web project that introduces an online store specializing in products for pets, featuring an appealing and
+              user-friendly interface. With a captivating combination of red and white colors, the design creates an inviting
+              atmosphere for pet owners.</p>
             </div>
             <div class="col-4 mob_off"></div>
 
@@ -158,19 +138,16 @@
           <div class="container text_plus_2">
             <div style="padding-bottom: 0px;" class="row justify-content-center">
               <div class="row justify-content-center">
-                <div class="col-8">
+                <div class="col-8 col-ver">
                   <picture><source srcset="img/drdoogy_ver.webp" type="image/webp"><img id="img_back_DR_3" width="100%" src="img/drdoogy_ver.jpg" alt=""></picture>
                 </div>
               </div>
               <div class="row justify-content-center">
                 <div class="col-2"></div>
                 <div style="color: #291314;   text-align: justify;" class="col-7">
-                  <h3> The Aston Martin website design showcases a host of advantages that elevate the user's browsing
-                    experience and
-                    exemplify
-                    the brand's elegance and performance. With a focus on user experience (UX) and user interface (UI)
-                    design, this
-                    captivating website boasts a range of features that set it apart from the rest.</h3>
+                  <h3> Emphasizing an attractive and convenient design, the color scheme of red and white creates a visually appealing
+                  atmosphere that instantly captures attention. The transparent comment bar and delivery window further enhance user
+                  interaction, allowing for easy communication and efficient order tracking.</h3>
                 </div>
                 <div class="col-2"></div>
               </div>
@@ -194,55 +171,47 @@
               <div class="col-4 white0000">
                 <h3>#white</h3>
               </div>
-              <div style="background-color: #b4b4b4;" class="col-4 b202020 bFF6700">
-                <h3>#b4b4b4</h3>
+              <div style="background-color: #de9d43;" class="col-4 b202020 bde9d43">
+                <h3>#de9d43</h3>
               </div>
-              <div style="background-color: #000000;" class="col-4 b6c1d32 b75CCEB">
-                <h3>#000000</h3>
+              <div style="background-color: #80190c;" class="col-4 b6c1d32 b75CCEB">
+                <h3>#80190c</h3>
               </div>
             </div>
           </div>
           <div class="container">
             <div class="row text_plus">
               <div class="col-6">
-                <h3>- Welcome to minimalist Landing Page design! With its simple and sleek layout, our page provides a
-                  seamless
-                  browsing
-                  experience. Featuring a user-friendly interface, you can effortlessly explore our product offerings
-                  and place orders
-                  with just a few clicks.</h3>
+                <h3>- "DrDoogy" is web project that brings you an exceptional online shopping experience for all your pet needs. As a
+                specialized internet store catering to products for domestic animals, platform offers a charming and user-friendly
+                interface that will leave you delighted.</h3>
               </div>
               <div class="col-6">
-                <h3>- Our streamlined design focuses on presenting key information in a concise manner, ensuring that
-                  you can quickly
-                  find the
-                  items you desire. Selecting and ordering products is a breeze, allowing you to complete your
-                  purchase in no time.
+                <h3>-Our streamlined design focuses on presenting key information in a concise manner, making it easy for you to quickly find
+                the items you desire. Selecting and ordering products is a breeze, allowing you to complete your purchase in no time.
+
                 </h3>
               </div>
               <div class="col-6">
-                <h3>- To showcase the satisfaction of our customers, we have included a dedicated testimonial section.
-                  This column
-                  displays
-                  genuine reviews from our happy customers, providing you with valuable insights about our products
-                  and services.</h3>
+                <h3>- To build trust and confidence, we have integrated a dedicated testimonial section on the website. This feature displays
+                genuine reviews from satisfied customers, offering valuable insights into the quality of our products and the
+                exceptional service we provide.</h3>
               </div>
               <div class="col-6">
-                <h3>- Adding a touch of fun and personality, we have incorporated interesting and expressive emojis
-                  throughout the
-                  page. These
-                  delightful visuals not only bring a smile to your face but also enhance the overall user experience.
+                <h3>- At "DrDoogy," understand the unique needs of pet owners. Our extensive product range includes toys, food, accessories,
+                and more, catering to a variety of pets and their individual requirements. The intuitive navigation system ensures that
+                customers can easily explore and locate the products they need, making the shopping process a breeze.
+
                 </h3>
               </div>
             </div>
           </div>
         </div>
         <div style="background: #272727;">
-          <div class="container">
+
             <div style="padding-bottom: 0px;" class="row">
-              <picture><source srcset="img/drdoogy_main_4.webp" type="image/webp"><img id="img_back_DR_6" style="margin: 150px 0px;" width="100%" src="img/drdoogy_main_4.jpg" alt=""></picture>
+              <picture><source srcset="img/drdoogy_main_4.webp" type="image/webp"><img id="img_back_DR_6"  width="100%" src="img/drdoogy_main_4.jpg" alt=""></picture>
             </div>
-          </div>
         </div>
         <div class="pg-1_bk_41">
           <div class="main_next_mob">
@@ -250,17 +219,16 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
-                <a href="index3.html">
-                  <picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_1" class="mobile_pic anim-pic" src="img/red_friesa.jpg" alt=""></picture>
-                </a>
+                  <a href="index3.html">
+                    <picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/red_friesa.jpg" alt=""></picture>
+                  </a>
                   <div class="row row_info_main">
                     <div class="col-6">
                       <h2>FRIESA</h2>
                     </div>
                     <div class="col-4">
-                      <a href="index3.html">
-                        <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
+                      <a href="index12.html">
+                        <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
                             fill="white" />
@@ -271,7 +239,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj .blur_obj"></span>
+                    <span class="blur_obj blur_obj_drdoogy"></span>
                   </div>
                 </div>
               </div>
@@ -305,8 +273,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230711175948"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230711175948"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230712195546"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230712195546"></script> -->
 
 
 
@@ -317,15 +285,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230711175948"></script>
-<script src="files/script /locomotive.js?_v=20230711175948"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230711175948"></script>
+<script src="files/script /swup.js?_v=20230712195546"></script>
+<script src="files/script /locomotive.js?_v=20230712195546"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230712195546"></script>
 
-<script src="files/script /script.js?_v=20230711175948"></script>
+<script src="files/script /script.js?_v=20230712195546"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230711175948"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230712195546"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 
