--- a/index12.html
+++ b/index12.html
@@ -4,17 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230721105639"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230721105639"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230721105639"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230721105639"></script>
-  <script src="files/script /tilt.js?_v=20230721105639"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230721122743"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230721122743"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230721122743"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230721122743"></script>
+  <script src="files/script /tilt.js?_v=20230721122743"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230721105639" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230721105639" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230721122743" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css?_v=20230721122743" rel="stylesheet"
+  integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="files/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="files/favicon/apple-icon-72x72.png">
@@ -79,8 +78,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230721105639" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230721105639"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230721122743" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230721122743"></script> -->
 
 <body style="background-color: rgb(28, 28, 28)">
   <main id="swup" class="transition-fade">
@@ -251,17 +250,16 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
-                <a href="index3.html">
-                  <picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_1" class="mobile_pic anim-pic" src="img/red_friesa.jpg" alt=""></picture>
-                </a>
+                  <a href="index3.html">
+                    <picture><source srcset="img/red_friesa.webp" type="image/webp"><img id="img_main_10" class="mobile_pic" src="img/red_friesa.jpg" alt=""></picture>
+                  </a>
                   <div class="row row_info_main">
                     <div class="col-6">
                       <h2>FRIESA</h2>
                     </div>
                     <div class="col-4">
                       <a href="index3.html">
-                        <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
+                        <svg width="40%" height="40%" viewBox="0 0 30 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M29.7071 8.7071C30.0976 8.31658 30.0976 7.68341 29.7071 7.29289L23.3431 0.92893C22.9526 0.538405 22.3195 0.538405 21.9289 0.92893C21.5384 1.31945 21.5384 1.95262 21.9289 2.34314L27.5858 8L21.9289 13.6569C21.5384 14.0474 21.5384 14.6805 21.9289 15.0711C22.3195 15.4616 22.9526 15.4616 23.3431 15.0711L29.7071 8.7071ZM1.11539e-07 9L29 9L29 7L-1.11539e-07 7L1.11539e-07 9Z"
                             fill="white" />
@@ -272,7 +270,7 @@
                 </div>
                 <div class="back_blur">
                   <div class="position-relative">
-                    <span class="blur_obj .blur_obj"></span>
+                    <span class="blur_obj"></span>
                   </div>
                 </div>
               </div>
@@ -306,8 +304,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230721105639"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230721105639"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230721122743"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230721122743"></script> -->
 
 
 
@@ -318,18 +316,17 @@
 
 
 
-<script src="files/script /swup.js?_v=20230721105639"></script>
-<script src="files/script /locomotive.js?_v=20230721105639"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230721105639"></script>
+<script src="files/script /swup.js?_v=20230721122743"></script>
+<script src="files/script /locomotive.js?_v=20230721122743"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230721122743"></script>
 
-<script src="files/script /script.js?_v=20230721105639"></script>
+<script src="files/script /script.js?_v=20230721122743"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230721105639"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js?_v=20230721122743"
+                integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
                 crossorigin="anonymous"></script>
-
 </footer>
 
 </html>
